updated map, table

--- a/test_meta.html
+++ b/test_meta.html
@@ -2,7 +2,7 @@
 <html lang="en-CA">
 <head>
   <meta charset="utf-8">
-  <title>Test Site</title>
+  <title>META</title>
   <link rel="stylesheet" type="text/css" href="semantic/dist/semantic.min.css">
   <link rel="stylesheet" type="text/css" href="test_general.css">
   <script
