--- a/test_table.html
+++ b/test_table.html
@@ -2,9 +2,10 @@
 <html lang="en-CA">
 <head>
   <meta charset="utf-8">
-  <title>Test Site</title>
+  <title>TABLE</title>
   <link rel="stylesheet" type="text/css" href="semantic/dist/semantic.min.css">
   <link rel="stylesheet" type="text/css" href="test_general.css">
+  <link rel="stylesheet" type="text/css" href="test_table.css">
   <script
     src="https://code.jquery.com/jquery-3.2.1.min.js"
     integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
